--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" type="image/x-icon" href="./img/icon.ico">
-  <title>Nintia Calculator</title>
+  <title>BEAUTIFUL Calculator</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E6EECR6H3Y"></script>
   <script>
@@ -21,7 +21,7 @@
 
 <body class="d-flex">
   <header>
-    <h1 id="page-title"> Calculadora Nintia Estate </h1>
+    <h1 id="page-title"> Beautiful Calculator </h1>
   </header>
   <main>
     <h2 id="main-title"> Profit Diario </h2>
